Refactored and documented body and sidebarToggle.

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,12 +27,7 @@
                     </span>
                 </a>
                 <nav class="navbar navbar-static-top">
-                    <a href="#" class="sidebar-toggle" lte-sidebar-toggle>
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
+                    <lte-sidebar-toggle></lte-sidebar-toggle>
                 
                     <div class="navbar-custom-menu">
                         <ul class="nav navbar-nav">
