The sidebar now closes on mobile when the content is clicked.

--- a/demo/index.html
+++ b/demo/index.html
@@ -276,7 +276,7 @@
             <aside class="main-sidebar">
                 <sidebar></sidebar>
             </aside>
-            <div class="content-wrapper">
+            <div class="content-wrapper" lte-content-wrapper>
                 <ui-view></ui-view>
             </div>
             <footer class="main-footer">
